--- a/views/layouts/navigation.ejs
+++ b/views/layouts/navigation.ejs
@@ -7,13 +7,13 @@
     </div>
     <div class="menu">
         <ul class="nav-list">
-            <li class="nav-list-item"><a href="index">Home</a></li>
-            <li class="nav-list-item"><a href="about">About</a></li>
-            <li class="nav-list-item"><a href="team">Team</a></li>
-            <li class="nav-list-item"><a href="groups">Groups</a></li>
-            <li class="nav-list-item"><a href="calendar">Calendar</a></li>
-            <li class="nav-list-item"><a href="blog">Blog</a></li>
-            <li class="nav-list-item"><a href="contact">Contact</a></li>
+            <li class="nav-list-item"><a href="index" class="text-white hover-text-tertiary-color">Home</a></li>
+            <li class="nav-list-item"><a href="about" class="text-white hover-text-tertiary-color">About</a></li>
+            <li class="nav-list-item"><a href="team" class="text-white hover-text-tertiary-color">Team</a></li>
+            <li class="nav-list-item"><a href="groups" class="text-white hover-text-tertiary-color">Groups</a></li>
+            <li class="nav-list-item"><a href="calendar" class="text-white hover-text-tertiary-color">Calendar</a></li>
+            <li class="nav-list-item"><a href="blog" class="text-white hover-text-tertiary-color">Blog</a></li>
+            <li class="nav-list-item"><a href="contact" class="text-white hover-text-tertiary-color">Contact</a></li>
         </ul>
     </div>
 </nav>
