--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="https://use.typekit.net/cmc7kuq.css">
     <link rel="stylesheet" href="/assets/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/vendor/aos/aos.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
