--- a/public/assets/scss/_main.scss
+++ b/public/assets/scss/_main.scss
@@ -7,15 +7,95 @@ body {
 }
 
 
-/* General Page css */
+.btn-learn-more {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 12px 32px;
+  border-radius: 4px;
+  transition: 0.3s;
+  line-height: 1;
+  color: #19b2ff;
+  -webkit-animation-delay: 0.8s;
+  animation-delay: 0.8s;
+  margin-top: 6px;
+  border: 2px solid #19b2ff;
+}
+
+.btn-learn-more:hover {
+  background: #19b2ff;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 9999;
+  overflow: hidden;
+  background: #37517e;
+}
+
+#preloader:before {
+  content: "";
+  position: fixed;
+  top: calc(50% - 30px);
+  left: calc(50% - 30px);
+  border: 6px solid #37517e;
+  border-top-color: #fff;
+  border-bottom-color: #fff;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  -webkit-animation: animate-preloader 1s linear infinite;
+  animation: animate-preloader 1s linear infinite;
+}
+
+@-webkit-keyframes animate-preloader {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes animate-preloader {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.animated {
+    -webkit-animation: up-down 2s ease-in-out infinite alternate-reverse both;
+    animation: up-down 2s ease-in-out infinite alternate-reverse both;
+}
+
+@media (max-width: 991px) {
+
+.animated {
+    -webkit-animation: none;
+    animation: none;
+  }
+}
+
+/* General Page Styling*/
 
 .page {
-  padding: 7.5em 0 3.75em 0;
+  padding: 7.5em 1em 3.75em 1em !important;
   overflow: hidden;
 }
 
 .section-bg {
-  background-color: #ffffff;
+  background-color: #eaeaea;
 }
 
 .section-title {
