--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -3,4 +3,10 @@
 @import "_color.scss";
 @import "_main.scss";
 @import "_navbar.scss";
+@import "_home.scss";
 @import "_about.scss";
+@import "_team.scss";
+@import "_groups.scss";
+
+@import "_blog.scss";
+@import "_footer.scss";
