--- a/views/layouts/navigation.ejs
+++ b/views/layouts/navigation.ejs
@@ -2,7 +2,7 @@
     <div class="menu-icon">
         <i class="fa fa-bars fa-2x"></i>
     </div>
-    <div class="logo animated fadeInUp">
+    <div class="logo animate fadeInUp">
         <img src="/assets/img/tamusa_acm_logo.svg" alt="Logo">
     </div>
     <div class="menu">
