--- a/public/assets/scss/_about.scss
+++ b/public/assets/scss/_about.scss
@@ -2,9 +2,9 @@
 /* About Page */
 
 .about .content h3 {
-    font-weight: 600;
-    font-size: 1.75em;
-    margin-top: 10rem;
+  font-weight: 600;
+  font-size: 1.75em;
+  margin-top: 10rem;
 }
 
 .about .content ul {
@@ -17,7 +17,7 @@
   position: relative;
 }
 
-.about .content ul li + li {
+.about .content ul li+li {
   margin-top: 10px;
 }
 
@@ -32,29 +32,6 @@
 
 .about .content p:last-child {
   margin-bottom: 0;
-}
-
-.about .content .btn-learn-more {
-  font-family: "Poppins", sans-serif;
-  font-weight: 500;
-  font-size: 14px;
-  letter-spacing: 1px;
-  display: inline-block;
-  padding: 12px 32px;
-  border-radius: 4px;
-  transition: 0.3s;
-  line-height: 1;
-  color: #19b2ff;
-  -webkit-animation-delay: 0.8s;
-  animation-delay: 0.8s;
-  margin-top: 6px;
-  border: 2px solid #19b2ff;
-}
-
-.about .content .btn-learn-more:hover {
-  background: #19b2ff;
-  color: #ffffff;
-  text-decoration: none;
 }
 
 .why-us .content {
@@ -78,13 +55,6 @@
   color: #c97000;
 }
 
-.why-us .img {
-    background-image: url("/assets/img/why-us.png") !important;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-
 .why-us .accordion-list {
   padding: 0 6.25em 3.75em 6.25em;
 }
@@ -94,7 +64,7 @@
   list-style: none;
 }
 
-.why-us .accordion-list li + li {
+.why-us .accordion-list li+li {
   margin-top: 1em;
 }
 
@@ -135,46 +105,50 @@
 }
 
 .why-us .accordion-list .icon-show {
-    display: none;
+  display: none;
 }
 
 .why-us .accordion-list a.collapsed {
-    color: #000000;
+  color: #000000;
 }
 
 .why-us .accordion-list a.collapsed:hover {
-    color: #19b2ff;
+  color: #19b2ff;
 }
 
 .why-us .accordion-list a.collapsed .icon-show {
-    display: inline-block;
+  display: inline-block;
 }
 
 .why-us .accordion-list a.collapsed .icon-close {
-    display: none;
+  display: none;
 }
 
 @media (max-width: 1024px) {
-    .why-us .content, .why-us .accordion-list {
-        padding-left: 0;
-        padding-right: 0;
-    }
+
+  .why-us .content,
+  .why-us .accordion-list {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 @media (max-width: 992px) {
-    .why-us .img {
-        min-height: 25em;
-    }
-    .why-us .content {
-        padding-top: 2em;
-    }
-    .why-us .accordion-list {
-        padding-bottom: 2em;
-    }
+  .why-us .img {
+    min-height: 25em;
+  }
+
+  .why-us .content {
+    padding-top: 2em;
+  }
+
+  .why-us .accordion-list {
+    padding-bottom: 2em;
+  }
 }
 
 @media (max-width: 575px) {
-    .why-us .img {
-        min-height: 12.5em;
-    }
+  .why-us .img {
+    min-height: 12.5em;
+  }
 }
