--- a/public/assets/scss/_navbar.scss
+++ b/public/assets/scss/_navbar.scss
@@ -1,115 +1,106 @@
-
-.acm-blue {
-  background-color: #0085CA !important;
-  color: #ffffff;
-}
-
-nav.black ul {
-    background: #0085ca;
-}
-
 /* Navbar Logo */
 
 .logo {
-    line-height: 3.75em;
-    position: fixed;
-    float: left;
-    margin: .5em 2.875em;
-    font-weight: bold;
-    font-size: 1.25em;
-    letter-spacing: 0.125em;
-    width: 3em;
+  line-height: 3.75em;
+  position: fixed;
+  float: left;
+  margin: .5em 2.875em;
+  font-weight: bold;
+  font-size: 1.25em;
+  letter-spacing: 0.125em;
+  width: 3em;
 }
 
 /* Navbar */
 
 nav {
-    position: fixed;
-    width: 100%;
+  position: fixed;
+  width: 100%;
+  line-height: 3.75em;
+  z-index: 1001;
+
+  ul {
     line-height: 3.75em;
-    z-index: 1001;
-    
-    ul {
-        line-height: 3.75em;
-        list-style: none;
-        background: rgba(0, 0, 0, 0);
-        overflow: hidden;
-        padding: 0;
-        text-align: right;
-        margin: 0;
-        padding-right: 2.5em;
-        transition: 1s;
-        
-        li {
-            display: inline-block;
-            padding: 1em 2.5em;
-            
-            a {
-                text-decoration: none;
-                font-size: 1em;
-                font-weight: 400;
-                text-shadow: .1em .1em .1em #000000;
-            }
-        }
+    list-style: none;
+    background: rgba(0, 0, 0, 0);
+    overflow: hidden;
+    padding: 0;
+    text-align: right;
+    margin: 0;
+    padding-right: 2.5em;
+    transition: 1s;
+
+    li {
+      display: inline-block;
+      padding: 1em 2.5em;
+
+      a {
+        text-decoration: none;
+        font-size: 1em;
+        font-weight: 400;
+        text-shadow: .1em .1em .1em #000000;
+      }
     }
+  }
 }
 
 .menu-icon {
-    line-height: 3.75em;
-    width: 100%;
-    background: #0085ca;
-    text-align: right;
-    box-sizing: border-box;
-    padding: 1em 1.5em;
-    cursor: pointer;
-    color: #ffffff;
-    display: none;
+  line-height: 3.75em;
+  width: 100%;
+  background: #0085ca;
+  text-align: right;
+  box-sizing: border-box;
+  padding: 1em 1.5em;
+  cursor: pointer;
+  color: #ffffff;
+  display: none;
 }
 
 @media(max-width: 1200px) {
 
-    .logo {
-          position: fixed;
-          top: 0;
-          margin-top: .5em;
-    }
+  .logo {
+    position: fixed;
+    top: 0;
+    margin-top: .5em;
+  }
 
-    nav {
-        ul {
-            max-height: 0px;
-            ul li {
-                box-sizing: border-box;
-                width: 100%;
-                padding: 1.5em;
-                text-align: center;
-            }
-        }
-    }
+  nav {
+    ul {
+      max-height: 0px;
 
-    .menu-icon {
-          display: block;
+      ul li {
+        box-sizing: border-box;
+        width: 100%;
+        padding: 1.5em;
+        text-align: center;
+      }
     }
+  }
+
+  .menu-icon {
+    display: block;
+  }
 }
 
 /* Navbar Animation */
 
 @keyframes FadeIn {
   0% {
-      opacity: 0;
-      -webkit-transition-duration: 0.8s;
-      transition-duration: 0.8s;
-      -webkit-transform: translateY(-10px);
-      -ms-transform: translateY(-10px);
-      transform: translateY(-10px);
+    opacity: 0;
+    -webkit-transition-duration: 0.8s;
+    transition-duration: 0.8s;
+    -webkit-transform: translateY(-10px);
+    -ms-transform: translateY(-10px);
+    transform: translateY(-10px);
   }
 
   100% {
-      opacity: 1;
-      -webkit-transform: translateY(0);
-      -ms-transform: translateY(0);
-      transform: translateY(0);
-      pointer-events: auto;
-      transition: cubic-bezier(0.4, 0, 0.2, 1);
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+    pointer-events: auto;
+    transition: cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
 
@@ -149,27 +140,27 @@ nav {
 
 @keyframes fadeInUp {
   from {
-      transform: translate3d(0, 40px, 0)
+    transform: translate3d(0, 40px, 0)
   }
 
   to {
-      transform: translate3d(0, 0, 0);
-      opacity: 1
-    }
+    transform: translate3d(0, 0, 0);
+    opacity: 1
+  }
 }
 
 @-webkit-keyframes fadeInUp {
   from {
-      transform: translate3d(0, 40px, 0)
+    transform: translate3d(0, 40px, 0)
   }
 
   to {
-      transform: translate3d(0, 0, 0);
-      opacity: 1
-    }
+    transform: translate3d(0, 0, 0);
+    opacity: 1
+  }
 }
 
-.animated {
+.animate {
   animation-duration: 1s;
   animation-fill-mode: both;
   -webkit-animation-duration: 1s;
