--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,83 +1,90 @@
 <%- include('layouts/header.ejs') %>
 <%- include('layouts/navigation.ejs') %>
 
-<div id="about" class="page container about aos-init aos-animate" data-aos="fade-up">
+<div class="container" style="height: 6em;"></div>
+<div id="about" class="page container about section-bg">
   <div class="section-title">
     <h2>About Us</h2>
   </div>
-  <div class="row content">
-    <div class="col-lg-6">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua.</p>
-      <ul>
-        <li><i class="fa fa-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-        <li><i class="fa fa-check-double"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-        <li><i class="fa fa-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-      </ul>
-    </div>
+  <div class="row content">    
     <div class="col-lg-6 pt-4 pt-lg-0">
       <p>
-        Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-        culpa qui officia deserunt mollit anim id est laborum.
+        ACM Student Chapter of TAMUSA is a student chapter of the national ACM, and exists to create a 
+        community among students within the Computing and Cyber Security Department and anyone else 
+        interested in technology.
       </p>
       <a href="#" class="btn-learn-more">Learn More</a>
     </div>
+    <div class="col-lg-6">
+      <p>ACM is organized to serve students for academic, professional, and social purposes at TAMUSA. The 
+        Chapter shall be involved with and conduct activities that include:</p>
+      <ul>
+        <li><i class="fa fa-check-double"></i> <b>Engaging</b> students in stimulating computing activities</li>
+        <li><i class="fa fa-check-double"></i> <b>Connecting</b> students with leaders in the computing field</li>
+        <li><i class="fa fa-check-double"></i> <b>Encouraging</b> the pursuit of career opportunities in computing</li>
+        <li><i class="fa fa-check-double"></i> <b>Mentoring and tutoring</b> students for academic and professional success</li>
+        <li><i class="fa fa-check-double"></i> <b>Broadening</b> both the University and local K-12 STEM communities through ACM</li>
+        <li><i class="fa fa-check-double"></i> <b>Building</b> a network of students, to include current, former, and future; businesses; and local leaders for the benefit of ACM members</li>
+      </ul>
+    </div>
+
   </div>
 </div>
 
-<div id="why-us" class="container-fluid why-us aos-init aos-animate" data-aos="fade-up">
+<div id="why-us" class="container-fluid why-us" style="padding: 3.5em 0;">
   <div class="row">
     <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch  order-2 order-lg-1">
       <div class="content">
-        <h3>Eum ipsam laborum deleniti <strong>velit pariatur architecto aut nihil</strong></h3>
+        <h3>What benefits does <strong>TAMUSA ACM</strong> give to me as a member?</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-          dolore magna aliqua. Duis aute irure dolor in reprehenderit
+          There are many reasons to join TAMUSA ACM. When you become a member, you become a part of the 
+          dynamic changes that are transforming our world, by helping to shape the future of computing. 
+          TAMUSA ACM provides the tools and resources to help get you there, by advancing your career and 
+          enriching your knowledge with life-long learning resources.
         </p>
       </div>
       <div class="accordion-list">
         <ul>
           <li>
-            <a data-toggle="collapse" class="collapse" href="#accordion-list-1"><span>01</span> Non consectetur a erat
-              nam at lectus urna duis? <i class="fa fa-chevron-down icon-show"></i><i
-                class="fa fa-chevron-up icon-close"></i></a>
+            <a data-toggle="collapse" class="collapse" href="#accordion-list-1"><span>01</span> Weekly 
+              Workshops <i class="fa fa-chevron-down icon-show"></i><i class="fa fa-chevron-up icon-close">
+              </i></a>
             <div id="accordion-list-1" class="collapse show" data-parent=".accordion-list">
               <p>
-                Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur
-                gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                Our workshops cover topics not presented in the classroom or they go more into depth on 
+                those topics. We chose the topics from current job postings to ensure that our members 
+                have the prerequisite knowledge to get the interview.
               </p>
             </div>
           </li>
           <li>
-            <a data-toggle="collapse" href="#accordion-list-2" class="collapsed"><span>02</span> Feugiat scelerisque
-              varius morbi enim nunc? <i class="fa fa-chevron-down icon-show"></i><i
-                class="fa fa-chevron-up icon-close"></i></a>
+            <a data-toggle="collapse" href="#accordion-list-2" class="collapsed"><span>02</span> Guest Speakers 
+              <i class="fa fa-chevron-down icon-show"></i><i class="fa fa-chevron-up icon-close"></i></a>
             <div id="accordion-list-2" class="collapse" data-parent=".accordion-list">
               <p>
-                Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id
-                donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit
-                ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                Get insightful information and ask questions of local business leaders, recruiters, and 
+                professionals working at your future company as well as alumni and University staff. All 
+                there to help you start your career in your dream position.
               </p>
             </div>
           </li>
           <li>
-            <a data-toggle="collapse" href="#accordion-list-3" class="collapsed"><span>03</span> Dolor sit amet
-              consectetur adipiscing elit? <i class="fa fa-chevron-down icon-show"></i><i
-                class="fa fa-chevron-up icon-close"></i></a>
+            <a data-toggle="collapse" href="#accordion-list-3" class="collapsed"><span>03</span> Participate 
+              in our Hackathon <i class="fa fa-chevron-down icon-show"></i><i class="fa fa-chevron-up icon-close"></i></a>
             <div id="accordion-list-3" class="collapse" data-parent=".accordion-list">
               <p>
-                Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum
-                integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt.
-                Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi
-                quis
+                As a student, you’ve got the skills, but what you need is the experience. The more Github 
+                commits and impressive projects you have in your portfolio, the better. The Hackathon is a 
+                great way to build a fully-functioning product in less than 48 hours.
               </p>
             </div>
           </li>
         </ul>
       </div>
     </div>
-    <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img white" data-aos-delay="150"></div>
+    <div class="col-lg-5 align-items-stretch order-1 order-lg-2 white">
+      <img src="/assets/img/why-us.png" class="img-fluid animate" alt="Why us?">
+    </div>
   </div>
 </div>
 
