--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -15,9 +15,8 @@
     <link rel="stylesheet" href="https://use.typekit.net/cmc7kuq.css">
     <link rel="stylesheet" href="/assets/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/vendor/aos/aos.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
     <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div class="container-fluid" style="padding-left: 0; padding-right: 0;">
