--- a/views/groups.ejs
+++ b/views/groups.ejs
@@ -12,6 +12,61 @@
     <div class="row">
         <div class="col-lg-6 mt-4 mt-lg-0 p-2">
             <div class="member d-flex align-items-start">
+                <div class="pic"><img src="/assets/img/groups/CCDC.png" class="img-fluid" alt=""></div>
+                <div class="member-info">
+                    <h4>Hackathon</h4>
+                    <span>Hackathon Committee</span>
+                    <p>Assist in the planning, organizing and operating TAMUSA ACM's very own hackathon.
+                    </p>
+                    <a href="#" class="btn-learn-more">Learn More</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-6 mt-4 mt-lg-0 p-2">
+            <div class="member d-flex align-items-start">
+                <div class="pic"><img src="/assets/img/groups/project-stamp.jpg" class="img-fluid" alt=""></div>
+                <div class="member-info">
+                    <h4>Projects</h4>
+                    <span>Projects Committee</span>
+                    <p>TAMUSA ACM’s very own multi-discipline incubator specializing in helping students 
+                        learn and contribute to long-term technology projects.
+                    </p>
+                    <a href="#" class="btn-learn-more">Learn More</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-6 mt-4 mt-lg-0 p-2">
+            <div class="member d-flex align-items-start">
+                <div class="pic"><img src="/assets/img/groups/member-stamp.jpg" class="img-fluid" alt=""></div>
+                <div class="member-info">
+                    <h4>Membership</h4>
+                    <span>Membership Committee</span>
+                    <p>Help grow and maintain TAMUSA ACM's strength, its members. Assist in the development 
+                        of fliers and posters as well as the maintanence of the Website.
+                    </p>
+                    <a href="#" class="btn-learn-more">Learn More</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-6 mt-4 mt-lg-0 p-2">
+            <div class="member d-flex align-items-start">
+                <div class="pic"><img src="/assets/img/groups/fundraising-stamp.png" class="img-fluid" alt=""></div>
+                <div class="member-info">
+                    <h4>Fundraising</h4>
+                    <span>Fundraising Committee</span>
+                    <p>All organizations need financial stability, TAMUSA ACM is no different. Help raise 
+                        the needed funds for t-shirts, gadgets, and more...
+                    </p>
+                    <a href="#" class="btn-learn-more">Learn More</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-6 mt-4 mt-lg-0 p-2">
+            <div class="member d-flex align-items-start">
                 <div class="pic"><img src="/assets/img/groups/ICPC.png" class="img-fluid" alt="ICPC"></div>
                 <div class="member-info">
                     <h4>ICPC</h4>
@@ -30,75 +85,6 @@
         <div class="col-lg-6 mt-4 mt-lg-0 p-2">
             <div class="member d-flex align-items-start">
                 <div class="pic"><img src="/assets/img/groups/CCDC.png" class="img-fluid" alt="CCDC"></div>
-                <div class="member-info">
-                    <h4>CCDC</h4>
-                    <span>Collegiate Cyber Defense Competition</span>
-                    <p>The Collegiate Cyber Defense Competition (CCDC) system is to provide institutions
-                        with an information assurance or computer security curriculum a controlled,
-                        competitive environment to assess their student's depth of understanding and
-                        operational competency in managing the challenges inherent in protecting a
-                        corporate network infrastructure and business information systems.
-                    </p>
-                    <a href="https://www.nationalccdc.org/index.php" class="btn-learn-more">Learn More</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-lg-6 mt-4 mt-lg-0 p-2">
-            <div class="member d-flex align-items-start">
-                <div class="pic"><img src="/assets/img/groups/CCDC.png" class="img-fluid" alt=""></div>
-                <div class="member-info">
-                    <h4>CCDC</h4>
-                    <span>Collegiate Cyber Defense Competition</span>
-                    <p>The Collegiate Cyber Defense Competition (CCDC) system is to provide institutions
-                        with an information assurance or computer security curriculum a controlled,
-                        competitive environment to assess their student's depth of understanding and
-                        operational competency in managing the challenges inherent in protecting a
-                        corporate network infrastructure and business information systems.
-                    </p>
-                    <a href="https://www.nationalccdc.org/index.php" class="btn-learn-more">Learn More</a>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="col-lg-6 mt-4 mt-lg-0 p-2">
-            <div class="member d-flex align-items-start">
-                <div class="pic"><img src="assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
-                <div class="member-info">
-                    <h4>CCDC</h4>
-                    <span>Collegiate Cyber Defense Competition</span>
-                    <p>The Collegiate Cyber Defense Competition (CCDC) system is to provide institutions
-                        with an information assurance or computer security curriculum a controlled,
-                        competitive environment to assess their student's depth of understanding and
-                        operational competency in managing the challenges inherent in protecting a
-                        corporate network infrastructure and business information systems.
-                    </p>
-                    <a href="https://www.nationalccdc.org/index.php" class="btn-learn-more">Learn More</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-lg-6 mt-4 mt-lg-0 p-2">
-            <div class="member d-flex align-items-start">
-                <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
-                <div class="member-info">
-                    <h4>CCDC</h4>
-                    <span>Collegiate Cyber Defense Competition</span>
-                    <p>The Collegiate Cyber Defense Competition (CCDC) system is to provide institutions
-                        with an information assurance or computer security curriculum a controlled,
-                        competitive environment to assess their student's depth of understanding and
-                        operational competency in managing the challenges inherent in protecting a
-                        corporate network infrastructure and business information systems.
-                    </p>
-                    <a href="https://www.nationalccdc.org/index.php" class="btn-learn-more">Learn More</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-lg-6 mt-4 mt-lg-0 p-2">
-            <div class="member d-flex align-items-start">
-                <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
                 <div class="member-info">
                     <h4>CCDC</h4>
                     <span>Collegiate Cyber Defense Competition</span>
