--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -7,6 +7,6 @@
 @import "_about.scss";
 @import "_team.scss";
 @import "_groups.scss";
-
 @import "_blog.scss";
+@import "_contact.scss";
 @import "_footer.scss";
