--- a/views/groups.ejs
+++ b/views/groups.ejs
@@ -4,9 +4,6 @@
 <div id="team" class="page container-fluid team aos-init aos-animate section-bg" data-aos="fade-up">
     <div class="section-title">
         <h2>Groups</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
-            fugiat sit in iste officiis commodi quidem hic quas.</p>
     </div>
 
     <div class="row">
@@ -18,6 +15,7 @@
                     <span>Hackathon Committee</span>
                     <p>Assist in the planning, organizing and operating TAMUSA ACM's very own hackathon.
                     </p>
+                    <!-- Create page for this group -->
                     <a href="#" class="btn-learn-more">Learn More</a>
                 </div>
             </div>
@@ -32,6 +30,7 @@
                     <p>TAMUSA ACM’s very own multi-discipline incubator specializing in helping students 
                         learn and contribute to long-term technology projects.
                     </p>
+                    <!-- Create page for this group -->
                     <a href="#" class="btn-learn-more">Learn More</a>
                 </div>
             </div>
@@ -46,6 +45,7 @@
                     <p>Help grow and maintain TAMUSA ACM's strength, its members. Assist in the development 
                         of fliers and posters as well as the maintanence of the Website.
                     </p>
+                    <!-- Create page for this group -->
                     <a href="#" class="btn-learn-more">Learn More</a>
                 </div>
             </div>
@@ -60,6 +60,7 @@
                     <p>All organizations need financial stability, TAMUSA ACM is no different. Help raise 
                         the needed funds for t-shirts, gadgets, and more...
                     </p>
+                    <!-- Create page for this group -->
                     <a href="#" class="btn-learn-more">Learn More</a>
                 </div>
             </div>
