--- a/views/about.ejs
+++ b/views/about.ejs
@@ -13,7 +13,7 @@
         community among students within the Computing and Cyber Security Department and anyone else 
         interested in technology.
       </p>
-      <a href="#" class="btn-learn-more">Learn More</a>
+      <a href="https://jagsync.tamusa.edu/organization/acm" class="btn-learn-more">Learn More</a>
     </div>
     <div class="col-lg-6">
       <p>ACM is organized to serve students for academic, professional, and social purposes at TAMUSA. The 
@@ -84,6 +84,25 @@
     </div>
     <div class="col-lg-5 align-items-stretch order-1 order-lg-2 white">
       <img src="/assets/img/why-us.png" class="img-fluid animate" alt="Why us?">
+    </div>
+  </div>
+</div>
+<div class="container page about section-bg">
+  <div class="row">
+    <div class="col-6">
+      <iframe style="display: block;" height="100%" width="100%" src="https://www.youtube.com/embed/BHIbT0e7LTc" frameborder="0" 
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+      </iframe>
+    </div>
+    <div class="col-6">
+      <h3>Why Join ACM?</h3>
+      <p>For over 70 years, ACM has helped computing professionals to be their most creative, connect to 
+        peers, and see what’s next. Joining ACM means you dare to be the best computing professional you 
+        can be.
+        <br>
+        <br>
+        Be Creative. Stay connected. Keep inventing.</p>
+        <a href="https://jagsync.tamusa.edu/organization/acm" class="btn-learn-more">Learn More</a>
     </div>
   </div>
 </div>
