--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -2,8 +2,8 @@
 <%- include('layouts/navigation.ejs') %>
 
 <div class="container" style="height: 6em;"></div>
-<div id="calendar" class="page container blog section-bg">
-    <div class="row section-title">
+<div id="blog" class="page container blog section-bg">
+    <div class="section-title">
         <h2>Blog</h2>
     </div>
 
@@ -30,23 +30,22 @@
                                     <div class="position-relative">
                                         <!--thumbnail img-->
                                         <div class="ratio_left-cover-1 image-wrapper">
-                                            <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
+                                            <a href="https://github.com/TAMUSA-ACM/Git-GitHub-Workshop">
                                                 <img class="img-fluid w-100"
-                                                    src="https://bootstrap.news/source/img1.jpg"
-                                                    alt="Bootstrap news template">
+                                                    src="/assets/img/blog/Git + GitHub.png"
+                                                    alt="Git and GitHub">
                                             </a>
                                         </div>
                                         <div class="position-absolute p-2 p-lg-3 b-0 w-100 bg-shadow">
                                             <!--title-->
-                                            <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
-                                                <h2 class="h3 post-title text-white my-1">Bootstrap 4 template news
-                                                    portal magazine perfect for news site</h2>
+                                            <a href="https://github.com/TAMUSA-ACM/Git-GitHub-Workshop">
+                                                <h2 class="h3 post-title text-white my-1">Git and GitHub</h2>
                                             </a>
                                             <!-- meta title -->
                                             <div class="news-meta">
                                                 <span class="news-author">by <a class="text-white font-weight-bold"
-                                                        href="../category/author.html">Jennifer</a></span>
-                                                <span class="news-date">Oct 22, 2019</span>
+                                                        href="../category/author.html">Leonard Box</a></span>
+                                                <span class="news-date">May 20, 2020</span>
                                             </div>
                                         </div>
                                     </div>
@@ -59,23 +58,22 @@
                                     <div class="position-relative">
                                         <!--thumbnail img-->
                                         <div class="ratio_left-cover-1 image-wrapper">
-                                            <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
+                                            <a href="https://medium.com/better-programming/how-to-stop-being-afraid-of-technical-interviews-b60b064ff003">
                                                 <img class="img-fluid w-100"
-                                                    src="https://bootstrap.news/source/img2.jpg"
-                                                    alt="Bootstrap news theme">
+                                                    src="/assets/img/blog/interview.png"
+                                                    alt="Interview">
                                             </a>
                                         </div>
                                         <div class="position-absolute p-2 p-lg-3 b-0 w-100 bg-shadow">
                                             <!--title-->
-                                            <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
-                                                <h2 class="h3 post-title text-white my-1">Walmart shares up 10% on
-                                                    online sales lift</h2>
+                                            <a href="https://medium.com/better-programming/how-to-stop-being-afraid-of-technical-interviews-b60b064ff003">
+                                                <h2 class="h3 post-title text-white my-1">How To Stop Being Afraid of Technical Interviews</h2>
                                             </a>
                                             <!-- meta title -->
                                             <div class="news-meta">
                                                 <span class="news-author">by <a class="text-white font-weight-bold"
-                                                        href="../category/author.html">Jennifer</a></span>
-                                                <span class="news-date">Oct 22, 2019</span>
+                                                        href="../category/author.html">Joey Colon</a></span>
+                                                <span class="news-date">November 22, 2019</span>
                                             </div>
                                         </div>
                                     </div>
@@ -88,23 +86,22 @@
                                     <div class="position-relative">
                                         <!--thumbnail img-->
                                         <div class="ratio_left-cover-1 image-wrapper">
-                                            <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
+                                            <a href="https://github.com/TAMUSA-ACM/BootStrap-4-and-GitHub-Pages">
                                                 <img class="img-fluid w-100"
-                                                    src="https://bootstrap.news/source/img3.jpg"
-                                                    alt="Bootstrap blog template">
+                                                    src="/assets/img/blog/bootstrap4.png"
+                                                    alt="Bootstrap4">
                                             </a>
                                         </div>
                                         <div class="position-absolute p-2 p-lg-3 b-0 w-100 bg-shadow">
                                             <!--title-->
-                                            <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
-                                                <h2 class="h3 post-title text-white my-1">Bank chief warns on Brexit
-                                                    staff moves to other company</h2>
+                                            <a href="https://github.com/TAMUSA-ACM/BootStrap-4-and-GitHub-Pages">
+                                                <h2 class="h3 post-title text-white my-1">Learn Bootstrap 4</h2>
                                             </a>
                                             <!-- meta title -->
                                             <div class="news-meta">
                                                 <span class="news-author">by <a class="text-white font-weight-bold"
-                                                        href="../category/author.html">Jennifer</a></span>
-                                                <span class="news-date">Oct 22, 2019</span>
+                                                        href="../category/author.html">Leonard Box</a></span>
+                                                <span class="news-date">June 12, 2020</span>
                                             </div>
                                         </div>
                                     </div>
@@ -117,23 +114,22 @@
                                     <div class="position-relative">
                                         <!--thumbnail img-->
                                         <div class="ratio_left-cover-1 image-wrapper">
-                                            <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
+                                            <a href="https://app.joinhandshake.com/events/518429">
                                                 <img class="img-fluid w-100"
-                                                    src="https://bootstrap.news/source/img4.jpg"
-                                                    alt="Bootstrap portal template">
+                                                    src="/assets/img/blog/accenture.png"
+                                                    alt="Accenture">
                                             </a>
                                         </div>
                                         <div class="position-absolute p-2 p-lg-3 b-0 w-100 bg-shadow">
                                             <!--title-->
-                                            <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
-                                                <h2 class="h3 post-title text-white my-1">The world's first floating
-                                                    farm making waves in Rotterdam</h2>
+                                            <a href="https://app.joinhandshake.com/events/518429">
+                                                <h2 class="h3 post-title text-white my-1">Virtual Externship with Accenture</h2>
                                             </a>
                                             <!-- meta title -->
                                             <div class="news-meta">
                                                 <span class="news-author">by <a class="text-white font-weight-bold"
-                                                        href="../category/author.html">Jennifer</a></span>
-                                                <span class="news-date">Oct 22, 2019</span>
+                                                        href="../category/author.html">Mays Center</a></span>
+                                                <span class="news-date">July 30, 2020</span>
                                             </div>
                                         </div>
                                     </div>
@@ -165,20 +161,19 @@
                                 <div class="position-relative">
                                     <!--thumbnail img-->
                                     <div class="ratio_right-cover-2 image-wrapper">
-                                        <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
-                                            <img class="img-fluid" src="https://bootstrap.news/source/img5.jpg"
-                                                alt="simple blog template bootstrap">
+                                        <a href="https://www.tutorialspoint.com/difference-between-stack-and-queue-data-structures">
+                                            <img class="img-fluid" src="/assets/img/blog/QUEUE_VS_STACK.png"
+                                                alt="Queue V. Stack">
                                         </a>
                                     </div>
                                     <div class="position-absolute p-2 p-lg-3 b-0 w-100 bg-shadow">
                                         <!-- category -->
                                         <a class="p-1 badge badge-primary rounded-0"
-                                            href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">Lifestyle</a>
+                                            href="https://www.tutorialspoint.com/data_structures_algorithms/index.htm">Data Structures</a>
 
                                         <!--title-->
                                         <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
-                                            <h2 class="h5 text-white my-1">Should you see the Fantastic Beasts
-                                                sequel?</h2>
+                                            <h2 class="h5 text-white my-1">Implement a Stack as a Queue and vice versa</h2>
                                         </a>
                                     </div>
                                 </div>
@@ -191,18 +186,18 @@
                                 <div class="position-relative">
                                     <!--thumbnail img-->
                                     <div class="ratio_right-cover-2 image-wrapper">
-                                        <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
-                                            <img class="img-fluid" src="https://bootstrap.news/source/img6.jpg"
-                                                alt="bootstrap templates for blog">
+                                        <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">
+                                            <img class="img-fluid" src="/assets/img/blog/JavaScript-logo.png"
+                                                alt="JavaScript">
                                         </a>
                                     </div>
                                     <div class="position-absolute p-2 p-lg-3 b-0 w-100 bg-shadow">
                                         <!-- category -->
                                         <a class="p-1 badge badge-primary rounded-0"
-                                            href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">Motocross</a>
+                                            href="https://www.w3schools.com/whatis/">Web Languages</a>
                                         <!--title-->
-                                        <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
-                                            <h2 class="h5 text-white my-1">Three myths about Florida elections
+                                        <a href="https://github.com/TAMUSA-ACM/Bootstrap4-and-JavaScript">
+                                            <h2 class="h5 text-white my-1">Learn Vanilla JavaScript
                                                 recount</h2>
                                         </a>
                                     </div>
@@ -216,19 +211,18 @@
                                 <div class="position-relative">
                                     <!--thumbnail img-->
                                     <div class="ratio_right-cover-2 image-wrapper">
-                                        <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
-                                            <img class="img-fluid" src="https://bootstrap.news/source/img7.jpg"
-                                                alt="bootstrap blog wordpress theme">
+                                        <a href="https://www.tutorialspoint.com/data_structures_algorithms/linked_lists_algorithm.htm">
+                                            <img class="img-fluid" src="/assets/img/blog/singly_linkedlist.png"
+                                                alt="Linked List">
                                         </a>
                                     </div>
                                     <div class="position-absolute p-2 p-lg-3 b-0 w-100 bg-shadow">
                                         <!-- category -->
                                         <a class="p-1 badge badge-primary rounded-0"
-                                            href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">Fitness</a>
+                                        href="https://www.tutorialspoint.com/data_structures_algorithms/index.htm">Data Structures</a>
                                         <!--title-->
-                                        <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
-                                            <h2 class="h5 text-white my-1">Finding Empowerment in Two Wheels and a
-                                                Helmet</h2>
+                                        <a href="https://github.com/TAMUSA-ACM/Data-Structures-Problem-Solving/blob/master/Linked%20Lists.pdf">
+                                            <h2 class="h5 text-white my-1">Singly Linked List</h2>
                                         </a>
                                     </div>
                                 </div>
@@ -241,19 +235,18 @@
                                 <div class="position-relative">
                                     <!--thumbnail img-->
                                     <div class="ratio_right-cover-2 image-wrapper">
-                                        <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
-                                            <img class="img-fluid" src="https://bootstrap.news/source/img8.jpg"
-                                                alt="blog website templates bootstrap">
+                                        <a href="https://www.freecodecamp.org/news/interviewing-prep-tips-and-tricks/">
+                                            <img class="img-fluid" src="/assets/img/blog/interview-chair.png"
+                                                alt="Interview">
                                         </a>
                                     </div>
                                     <div class="position-absolute p-2 p-lg-3 b-0 w-100 bg-shadow">
                                         <!-- category -->
                                         <a class="p-1 badge badge-primary rounded-0"
-                                            href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">Adventure</a>
+                                            href="https://www.allaboutcareers.com/careers-advice/interview-tips/technical-interview">Interview Prep</a>
                                         <!--title-->
-                                        <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
-                                            <h2 class="h5 text-white my-1">Ditch receipts and four other tips to be
-                                                a shopper</h2>
+                                        <a href="https://everyday.codes/life/grinding-hackerrank-leetcode-is-not-enough/">
+                                            <h2 class="h5 text-white my-1">Grinding HackerRank/Leetcode is Not Enough</h2>
                                         </a>
                                     </div>
                                 </div>
