--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -8,34 +8,34 @@
     </div>
 
     <div class="row">
-        <div class="card col-lg-5 d-flex align-items-stretch">
+
+        <div class="col-lg-5 d-flex align-items-stretch">
             <div class="info">
                 <div class="address">
-                    <i class="icofont-google-map"></i>
+                    <i class="fa fa-map-marked"></i>
                     <h4>Location:</h4>
-                    <p>A108 Adam Street, New York, NY 535022</p>
+                    <p>1 University Way, San Antonio, TX 78244</p>
                 </div>
 
                 <div class="email">
-                    <i class="icofont-envelope"></i>
+                    <i class="fa fa-envelope"></i>
                     <h4>Email:</h4>
-                    <p>info@example.com</p>
+                    <a href="mailto:tamusa-acm@mail.com"><p>tamusa-acm@gmail.com</p></a>
                 </div>
 
                 <div class="phone">
-                    <i class="icofont-phone"></i>
+                    <i class="fa fa-phone"></i>
                     <h4>Call:</h4>
-                    <p>+1 5589 55488 55s</p>
+                    <a href="tel:210-784-2315"><p>210-784-2315</p></a>
                 </div>
 
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1739.6216256456953!2d-98.52626902810074!3d29.304539463676672!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x865c5723efc3b893%3A0x4bdc7416c3b7fbc8!2sScience%20%26%20Technology%20Building!5e0!3m2!1sen!2sus!4v1595259370958!5m2!1sen!2sus"
                     frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
         </div>
 
-        <div class="card col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+        <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                 <div class="form-row">
                     <div class="form-group col-md-6">
@@ -75,4 +75,4 @@
 </div>
 
 
-<%- include('layouts/footer.ejs') %>
+    <%- include('layouts/footer.ejs') %>
