--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -5,7 +5,6 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <h4>Join Our Newsletter</h4>
-                    <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
                     <form action="" method="post">
                         <input type="email" name="email"><input type="submit" value="Subscribe">
                     </form>
@@ -25,7 +24,7 @@
                         1 University Way <br>
                         San Antonio, TX 78244<br>
                         United States <br><br>
-                        <strong>Phone:</strong> +1 210-xxx-xxxx<br>
+                        <strong>Phone:</strong> 210-784-2315<br>
                         <strong>Email:</strong> tamusa.acm@gmail.com<br>
                     </p>
                 </div>
@@ -33,34 +32,75 @@
                 <div class="col-lg-3 col-md-6 footer-links">
                     <h4>Useful Links</h4>
                     <ul>
-                        <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+                        <li>
+                            <i class="fa fa-chevron-right"></i> 
+                            <a href="index">Home</a>
+                        </li>
+                        <li>
+                            <i class="fa fa-chevron-right"></i>
+                            <a href="about">About us</a>
+                        </li>
+                        <li>
+                            <i class="fa fa-chevron-right"></i> 
+                            <a href="services">Services</a>
+                        </li>
+                        <li>
+                            <i class="fa fa-chevron-right"></i> 
+                            <a href="terms">Terms of service</a>
+                        </li>
+                        <li>
+                            <i class="fa fa-chevron-right"></i> 
+                            <a href="privacy">Privacy policy</a>
+                        </li>
                     </ul>
                 </div>
 
                 <div class="col-lg-3 col-md-6 footer-links">
-                    <h4>Our Services</h4>
+                    <h4>External Links</h4>
                     <ul>
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> <a href="#">Lorem Ipsum</a></li>
-                        <li></li><i class="fa fa-chevron-right" aria-hidden="true"></i> <a href="#">Lorem Ipsum</a></li>
-                        <li></li><i class="fa fa-chevron-right" aria-hidden="true"></i> <a href="#">Lorem Ipsum</a></li>
-                        <li></li><i class="fa fa-chevron-right" aria-hidden="true"></i> <a href="#">Lorem Ipsum</a></li>
-                        <li></li><i class="fa fa-chevron-right" aria-hidden="true"></i> <a href="#">Lorem Ipsum</a></li>
+                        <li>
+                            <i class="fa fa-chevron-right" aria-hidden="true"></i> 
+                            <a href="https://www.tamusa.edu/">Texas A&M University - San Antonio</a>
+                        </li>
+                        <li>
+                            <i class="fa fa-chevron-right" aria-hidden="true"></i> 
+                            <a href="https://www.acm.org/">Association of Computing Machinery</a>
+                        </li>
+                        <li>
+                            <i class="fa fa-chevron-right" aria-hidden="true"></i> 
+                            <a href="https://jagsync.tamusa.edu/">JagSync</a>
+                        </li>
+                        <!--
+                        <li>
+                            <i class="fa fa-chevron-right" aria-hidden="true"></i> 
+                            <a href="#">Lorem Ipsum</a>
+                        </li>
+                        <li>
+                            <i class="fa fa-chevron-right" aria-hidden="true"></i> 
+                            <a href="#">Lorem Ipsum</a>
+                        </li>
+                        -->
                     </ul>
                 </div>
 
                 <div class="col-lg-3 col-md-6 footer-links">
                     <h4>Our Social Networks</h4>
-                    <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
                     <div class="social-links mt-3">
-                        <a href="#" class="twitter"><i class="fab fa-twitter" aria-hidden="true"></i></a>
-                        <a href="#" class="facebook"><i class="fab fa-facebook" aria-hidden="true"></i></a>
-                        <a href="#" class="instagram"><i class="fab fa-instagram" aria-hidden="true"></i></a>
-                        <a href="#" class="youtube"><i class="fab fa-youtube" aria-hidden="true"></i></a>
-                        <a href="#" class="linkedin"><i class="fab fa-linkedin" aria-hidden="true"></i></i></a>
+                        <a href="https://www.linkedin.com/company/tamusa-acm/" class="linkedin">
+                            <i class="fab fa-linkedin" aria-hidden="true"></i></i>
+                        </a>
+                        <a href="https://www.facebook.com/ACM.TAMUSA" class="facebook">
+                            <i class="fab fa-facebook" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://www.instagram.com/acm.tamusa" class="instagram">
+                            <i class="fab fa-instagram" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://twitter.com/acm_tamusa" class="twitter">
+                            <i class="fab fa-twitter" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://www.youtube.com/channel/UC62zFW0r8-JAgDdvJOhd2aA" class="youtube">
+                            <i class="fab fa-youtube" aria-hidden="true"></i>
+                        </a>
                     </div>
                 </div>
 
@@ -72,7 +112,7 @@
         <div class="copyright">
             &copy; Copyright <strong><span>TAMUSA ACM</span></strong>. All Rights Reserved
         </div>
-        <div class="credits">Designed by <a href="#">#</a></div>
+        <div class="credits">Designed by <a href="http://burntbootcreek.com"><span style="color: white; text-decoration: none;"> Burnt Boot Creek</span></a></div>
     </div>
 </footer><!-- End Footer -->
 <!-- JavaScript Files -->
