--- a/views/team.ejs
+++ b/views/team.ejs
@@ -16,7 +16,7 @@
                         <div class="card">
                             <div class="card-body text-center">
                                 <p><img class=" img-fluid"
-                                        src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_01.png"
+                                        src="/assets/img/team/yang.jpg"
                                         alt="card image"></p>
                                 <h4 class="card-title text-primary-color">Dr Jeong Yang</h4>
                                 <p class="card-text">Faculty Advisor</p>
@@ -29,9 +29,10 @@
                         <div class="card">
                             <div class="card-body text-center mt-4">
                                 <h4 class="card-title text-primary-color">Dr. Jeong Yang</h4>
-                                <p class="card-text">This is basic card with image on top, title, description and
-                                    button.This is basic card with image on top, title, description and button.This is
-                                    basic card with image on top, title, description and button.</p>
+                                <p class="card-text">Dr. Yang earned her MS and PhD degrees in Computer 
+                                    Science and Software Engineering from Auburn University. She currently 
+                                    teaches Programming Fundamentals III and Algorithms at TAMUSA. 
+                                    </p>
                                 <ul class="list-inline">
                                     <li class="list-inline-item">
                                         <a class="social-icon text-xs-center hover-text-tertiary-color" target="_blank"
@@ -71,7 +72,7 @@
                         <div class="card">
                             <div class="card-body text-center">
                                 <p><img class=" img-fluid"
-                                        src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_01.png"
+                                        src="/assets/img/team/lee.jpg"
                                         alt="card image"></p>
                                 <h4 class="card-title text-primary-color">Dr. Young Lee</h4>
                                 <p class="card-text">Faculty Advisor</p>
@@ -84,9 +85,10 @@
                         <div class="card">
                             <div class="card-body text-center mt-4">
                                 <h4 class="card-title text-primary-color">Dr. Young Lee</h4>
-                                <p class="card-text">This is basic card with image on top, title, description and
-                                    button.This is basic card with image on top, title, description and button.This is
-                                    basic card with image on top, title, description and button.</p>
+                                <p class="card-text">Dr. Lee earned his PhD from Auburn University and currently 
+                                    teaches Programming Fundamentals I, Discrete Computing, Mobile App Development II, 
+                                    and Operating Systems.
+                                </p>
                                 <ul class="list-inline">
                                     <li class="list-inline-item">
                                         <a class="social-icon text-xs-center hover-text-tertiary-color" target="_blank"
@@ -131,7 +133,7 @@
                         <div class="card">
                             <div class="card-body text-center">
                                 <p><img class=" img-fluid"
-                                        src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_01.png"
+                                        src="/assets/img/team/box.jpg"
                                         alt="card image"></p>
                                 <h4 class="card-title text-primary-color">Leonard Box</h4>
                                 <p class="card-text">Chair</p>
@@ -144,9 +146,8 @@
                         <div class="card">
                             <div class="card-body text-center mt-4">
                                 <h4 class="card-title text-primary-color">Leonard Box</h4>
-                                <p class="card-text">This is basic card with image on top, title, description and
-                                    button.This is basic card with image on top, title, description and button.This is
-                                    basic card with image on top, title, description and button.</p>
+                                <p class="card-text"><span class="text-center">Computer Science</span><br>
+                                    <span class="text-center">Senior</span><br></p>
                                 <ul class="list-inline">
                                     <li class="list-inline-item">
                                         <a class="social-icon text-xs-center hover-text-tertiary-color" target="_blank"
@@ -186,7 +187,7 @@
                         <div class="card">
                             <div class="card-body text-center">
                                 <p><img class=" img-fluid"
-                                        src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_01.png"
+                                        src="/assets/img/team/lachov.jpg"
                                         alt="card image"></p>
                                 <h4 class="card-title text-primary-color">Petar Lachov</h4>
                                 <p class="card-text">Vice Chair</p>
@@ -241,7 +242,7 @@
                         <div class="card">
                             <div class="card-body text-center">
                                 <p><img class=" img-fluid"
-                                        src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_01.png"
+                                        src="/assets/img/team/blank.png"
                                         alt="card image"></p>
                                 <h4 class="card-title text-primary-color">James Mick</h4>
                                 <p class="card-text">Treasurer</p>
@@ -297,7 +298,7 @@
                         <div class="card">
                             <div class="card-body text-center">
                                 <p><img class=" img-fluid"
-                                        src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_01.png"
+                                        src="/assets/img/team/blank.png"
                                         alt="card image"></p>
                                 <h4 class="card-title text-primary-color">Maria De La Garza</h4>
                                 <p class="card-text">Secretary</p>
@@ -352,7 +353,7 @@
                         <div class="card">
                             <div class="card-body text-center">
                                 <p><img class=" img-fluid"
-                                        src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_01.png"
+                                        src="/assets/img/team/johnson.jpg"
                                         alt="card image"></p>
                                 <h4 class="card-title text-primary-color">Tom Johnson</h4>
                                 <p class="card-text">Risk Management Officer</p>
@@ -407,9 +408,9 @@
                         <div class="card">
                             <div class="card-body text-center">
                                 <p><img class=" img-fluid"
-                                        src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_01.png"
+                                        src="/assets/img/team/blank.png"
                                         alt="card image"></p>
-                                <h4 class="card-title text-primary-color">Selina Urias</h4>
+                                <h4 class="card-title text-primary-color">Selina Leticia Urias</h4>
                                 <p class="card-text">Community Relations Director</p>
                                 <a href="#" class="btn btn-primary btn-sm primary-color border-primary-color hover-text-tertiary-color"><i
                                         class="fa fa-plus"></i></a>
@@ -463,7 +464,7 @@
                         <div class="card">
                             <div class="card-body text-center">
                                 <p><img class=" img-fluid"
-                                        src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_01.png"
+                                        src="/assets/img/team/blank.png"
                                         alt="card image"></p>
                                 <h4 class="card-title text-primary-color">VACANT</h4>
                                 <p class="card-text">Education Director</p>
@@ -518,7 +519,7 @@
                         <div class="card">
                             <div class="card-body text-center">
                                 <p><img class=" img-fluid"
-                                        src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_01.png"
+                                        src="/assets/img/team/blank.png"
                                         alt="card image"></p>
                                 <h4 class="card-title text-primary-color">VACANT</h4>
                                 <p class="card-text">Fundraising Director</p>
@@ -573,7 +574,7 @@
                         <div class="card">
                             <div class="card-body text-center">
                                 <p><img class=" img-fluid"
-                                        src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_01.png"
+                                        src="/assets/img/team/blank.png"
                                         alt="card image"></p>
                                 <h4 class="card-title text-primary-color">VACANT</h4>
                                 <p class="card-text">Hackathon Director</p>
@@ -629,7 +630,7 @@
                         <div class="card">
                             <div class="card-body text-center">
                                 <p><img class=" img-fluid"
-                                        src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_01.png"
+                                        src="/assets/img/team/blank.png"
                                         alt="card image"></p>
                                 <h4 class="card-title text-primary-color">VACANT</h4>
                                 <p class="card-text">Membership Director</p>
@@ -684,7 +685,7 @@
                         <div class="card">
                             <div class="card-body text-center">
                                 <p><img class=" img-fluid"
-                                        src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_01.png"
+                                        src="/assets/img/team/blank.png"
                                         alt="card image"></p>
                                 <h4 class="card-title text-primary-color">VACANT</h4>
                                 <p class="card-text">Projects Director</p>
@@ -739,7 +740,7 @@
                         <div class="card">
                             <div class="card-body text-center">
                                 <p><img class=" img-fluid"
-                                        src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_01.png"
+                                        src="/assets/img/team/thomas.jpg"
                                         alt="card image"></p>
                                 <h4 class="card-title text-primary-color">Christian Thomas</h4>
                                 <p class="card-text">Public Affairs Director</p>
@@ -795,7 +796,7 @@
                         <div class="card">
                             <div class="card-body text-center">
                                 <p><img class=" img-fluid"
-                                        src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_01.png"
+                                        src="/assets/img/team/blank.png"
                                         alt="card image"></p>
                                 <h4 class="card-title text-primary-color">VACANT</h4>
                                 <p class="card-text">Social Events Director</p>
