--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -29,8 +29,8 @@
                     <a href="tel:210-784-2315"><p>210-784-2315</p></a>
                 </div>
 
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1739.6216256456953!2d-98.52626902810074!3d29.304539463676672!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x865c5723efc3b893%3A0x4bdc7416c3b7fbc8!2sScience%20%26%20Technology%20Building!5e0!3m2!1sen!2sus!4v1595259370958!5m2!1sen!2sus"
-                    frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4190.494690670057!2d-98.52753748458625!3d29.304542160097856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x865c5723efc3b893%3A0x4bdc7416c3b7fbc8!2sScience%20%26%20Technology%20Building!5e1!3m2!1sen!2sus!4v1595267282743!5m2!1sen!2sus" 
+                    frameborder="0" style="width: 100%; height: 290px;"  allowfullscreen></iframe>
             </div>
 
         </div>
