--- a/views/groups.ejs
+++ b/views/groups.ejs
@@ -9,11 +9,12 @@
     <div class="row">
         <div class="col-lg-6 mt-4 mt-lg-0 p-2">
             <div class="member d-flex align-items-start">
-                <div class="pic"><img src="/assets/img/groups/CCDC.png" class="img-fluid" alt=""></div>
+                <div class="pic"><img src="/assets/img/groups/hackathon.jpg" class="img-fluid" alt=""></div>
                 <div class="member-info">
                     <h4>Hackathon</h4>
                     <span>Hackathon Committee</span>
-                    <p>Assist in the planning, organizing and operating TAMUSA ACM's very own hackathon.
+                    <p>Assist in the planning, organizing and operating TAMUSA ACM's very own hackathon. 
+                        Lots to do with so little time!
                     </p>
                     <!-- Create page for this group -->
                     <a href="#" class="btn-learn-more">Learn More</a>
