--- a/views/article.ejs
+++ b/views/article.ejs
@@ -7,8 +7,8 @@
         <h2>Groups</h2>
     </div>  
     <div class="row">
-        <div class="col-8 offset-2">
-            <img class="img-fluid" src="/assets/img/blog<%= image %>" alt="<%= title %>">
+        <div class="col-8 offset-2">  
+            <img class="img-fluid" src="/assets/img/blog/#" alt="#">
         </div>
     </div>
     <div class="row">
