--- a/views/submitContact.ejs
+++ b/views/submitContact.ejs
@@ -8,10 +8,18 @@
     </div>
     <div class="row">
         <div class="col-3 offset-3">
-            <p>Name:</p>   
+            <p>First Name:</p>   
         </div>
         <div class="col-3">
-            <p><%= contact.name %></p>
+            <p><%= contact.firstName %></p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-3 offset-3">
+            <p>Last Name:</p>   
+        </div>
+        <div class="col-3">
+            <p><%= contact.lastName %></p>
         </div>
     </div>
     <div class="row">
