--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1077,6 +1077,13 @@ nav {
   100% {
     transform: rotate(360deg); } }
 /* createArticle Page */
+.img-article {
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: thin solid #000000;
+  height: 25em; }
+
 /* Footer */
 #footer {
   font-size: 14px;
