--- a/public/assets/scss/_article.scss
+++ b/public/assets/scss/_article.scss
@@ -1,3 +1,10 @@
 
 /* createArticle Page */
 
+.img-article {
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: thin solid #000000;
+    height: 25em;
+}
