--- a/views/layouts/navigation.ejs
+++ b/views/layouts/navigation.ejs
@@ -7,7 +7,7 @@
     </div>
     <div class="menu">
         <ul class="nav-list">
-            <li class="nav-list-item"><a href="index" class="text-white hover-text-tertiary-color">Home</a></li>
+            <li class="nav-list-item"><a href="/" class="text-white hover-text-tertiary-color">Home</a></li>
             <li class="nav-list-item "><a href="about" class="text-white hover-text-tertiary-color">About</a></li>
             <li class="nav-list-item"><a href="team" class="text-white hover-text-tertiary-color">Team</a></li>
             <li class="nav-list-item"><a href="groups" class="text-white hover-text-tertiary-color">Groups</a></li>
